ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "$NGINX_INGRESS_IP.nip.io"
      http:
        paths:                                             
    - pathType: Prefix           
      path: "/hello"
      backend:
        service:
          name: hello-app
          port:
            number: 8080
